--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project_Designer</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <article class="logo">
+            <img src="./assets/img/logo.svg" alt="logo">
+            <div class="logoText">
+                <h2>TheDesignProject</h2>
+                <p>by a WebDesigner</p>
+            </div>
+        </article>
+
+        <div>
+            <img src="./assets/img/ilustracion1.png" alt="">
+            <img src="./assets/img/ilustracion_people.pngs" alt="">
+        </div>
+
+        <article>
+            <h1>How to become a better designer?</h1>
+            <p>A challenge to improve your product design skills by solving problems in your daily life.</p>
+        </article>
+        <p>SCROLL TO SEE MORE —</p>
+    </header>
+
 </body>
+
 </html>
