finished page1 and page2

--- a/index.html
+++ b/index.html
@@ -30,12 +30,19 @@
             </div>
             <div class="heading">
                 <h1>How to become a better designer?</h1>
-                <p>A challenge to improve your product design skills by solving problems in your daily life.</p>
+                <p>A challenge to improve your product design skills by solving problems in your daily life. <img src="./assets/img/rocket.png" alt=""></p>
                 <p>SCROLL TO SEE MORE —</p>
             </div>
         </article>
 
     </header>
+
+    <main>
+        <section class=" pageSize page2">
+            <img src="./assets/img/images.jpg" alt="">
+        </section>
+
+    </main>
 
 </body>
 
